--- a/panel.css
+++ b/panel.css
@@ -11,9 +11,7 @@ body{
 .container{
     display: flex;
     width:100%;
-    height: 100%;
-    max-width: 960px;
-    max-height: 70%;
+    max-width: 900px;
     padding: 15px 20px;
     justify-content: center;
     align-items: center;
@@ -47,12 +45,14 @@ ul li{
    text-align: center;
    border-right: 1px solid #e1f1ff;
    margin: 20px 0;
+   padding: 25px 0 ;
 }
 .inner:last-child{
     border-right: none;
 }
 h2{
    
+    display: blocks;
     font-size: 1.5em;
     color:#888;
     letter-spacing: 1px;
@@ -60,10 +60,10 @@ h2{
 span{
     display: block;
     color:#0d65ca;
-    font-size: 2em;
+    font-size: 32px;
     margin-bottom: 16px;
     margin-top: 25px;
-    font-weight: bold;
+    font-weight: 700;
     border-top: 1px solid #e1f1ff;
     width:87%;
     margin-left: 37px;
@@ -72,17 +72,21 @@ span{
 #dollar{
    
     border-top: 1px solid #e1f1ff;
-    margin-top: 27px;
+    margin-top: 10px;
    
 
+}
+.li{
+    margin-top: 50px;
 }
 button{
     background: none;
     border-radius: 8px;
-    padding: 7px 25px;
+    padding: 15px 30px;
     margin-left: 35px;
     color: #016ff9;
     transition: box-shadow 0.2s ease-in,transform 0.2s ease-in;
+    font-size: 16px;
 }
 #btn{
     background-color: #016ff9;
@@ -143,7 +147,7 @@ button:hover{
     button{
         background: none;
         border-radius: 8px;
-        padding: 2x 10px;
+        padding: 0 10px;
         margin-left: 35px;
         color: #016ff9;
         transition: box-shadow 0.2s ease-in,transform 0.2s ease-in;
