--- a/panel.css
+++ b/panel.css
@@ -115,40 +115,19 @@ button:hover{
     box-shadow: 0px 10px 10px 1px #5189ce;
 }
 
-@media (max-width:1003px) {
-    body{
-        background-color: #60a9ff;;
-        height: 100%;
-    }
+@media (max-width:810px){
     .container{
-        display: flex;
+        margin-top: 140%;
+        width:700px;
         flex-direction: column;
-        width:40%;
-        height: 100%;
-        padding: 0 40px;
-        align-items: flex-start;
-        background-color: white;
-        border-radius: 10px;
-        text-transform: uppercase;
-        font-size: 0.8em;
     }
     .inner{
-        border-right: none;
-        border-bottom: 1.5px solid #e1f1ff;
-    }
-    button{
-        margin-bottom: 10px;
+        
+       border-bottom: 1px solid #e1f1ff;
+       
     }
     .inner:last-child{
         border-bottom: none;
     }
-    button{
-        background: none;
-        border-radius: 8px;
-        padding: 0 10px;
-        margin-left: 35px;
-        color: #016ff9;
-        transition: box-shadow 0.2s ease-in,transform 0.2s ease-in;
-    }
-  
+    
 }
